assets/css/screen.css
/* ... */
.listfeaturedtag h4.card-text,
.listrecent h4.card-text {
    color: rgba(0, 0, 0, .44);
    font-size: 0.95rem;
    line-height: 1.6;
    font-weight: 400;
}

.featured-box-img-cover {
    object-fit: cover;
    width: 100%;
    height: 100%;
    max-height: 100%;
}

@media (max-width:991px) {
    .featured-box-img-cover {
        height: auto;
        width: 100%;
    }
}

.wrapfooter {
    font-size: .8rem;
    display: flex;
    align-items: center;
    margin-bottom: 15px;
}

.author-thumb {
    width: 40px;
    height: 40px;
    margin-right: 13px;
    border-radius: 100%;
}

.post-top-meta {
    margin-bottom: 2rem;
}

.post-top-meta .author-thumb {
    width: 72px;
    height: 72px;
}

.post-top-meta.authorpage .author-thumb {
    margin-top: 40px;
}

.post-top-meta span {
    font-size: 0.9rem;
    color: rgba(0, 0, 0, .44);
    display: inline-block;
}

.post-top-meta .author-description {
    margin-bottom: 5px;
    margin-top: 5px;
    font-size: 0.95rem;
}

.toc ul {
    padding-left: 1.2em;
    list-style: none;
    font-weight: 400;
}

.toc-header{
    text-overflow: ellipsis;
}

.toc-header-1{
    font-size: 0.9rem;
}

.toc-header-2{
    font-size: 0.85rem;
}

.toc-header-3{
    font-size: 0.8rem;
}

.toc-header-4{
    font-size: 0.75rem;
}

.toc-header-5{
    font-size: 0.7rem;
}

.toc-header-6{
    font-size: 0.6rem;
}

.toc-header a {
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    width: 100%;
    text-align: left;
    color:#999;
    height: 5%;
}

.author-meta {
    flex: 1 1 auto;
    white-space: nowrap !important;
    text-overflow: ellipsis !important;
    overflow: hidden !important;
}

span.post-name,
span.post-date,
span.author-meta {
    display: inline-block;
}

span.post-date,
span.post-read {
    color: rgba(0, 0, 0, .44);
}

span.post-read-more {
    align-items: center;
    display: inline-block;
    float: right;
    margin-top: 8px;
}

span.post-read-more a {
    color: rgba(0, 0, 0, .44);
}

span.post-name a,
span.post-read-more a:hover {
    color: rgba(0, 0, 0, .8);
}

.dot:after {
    content: "·";
    margin-left: 3px;
    margin-right: 3px;
}

.mediumnavigation .form-control {
    font-size: 0.8rem;
    border-radius: 30px;
    overflow: hidden;
    border: 1px solid rgba(0, 0, 0, 0.09);
    min-width: 180px;
}

.mediumnavigation .form-inline {
    margin-left: 15px;
}

.mediumnavigation .form-inline .btn {
    margin-left: -50px;
    border: 0;
    border-radius: 30px;
    cursor: pointer;
}

.mediumnavigation .form-inline .btn:hover,
.mediumnavigation .form-inline .btn:active {
    background: transparent;
    color: green;
}

.mediumnavigation .navbar-brand {
    font-weight: 500;
}

.mediumnavigation .dropdown-menu {
    border: 1px solid rgba(0, 0, 0, 0.08);
    margin: .5rem 0 0;
}

.mediumnavigation .nav-item,
.dropdown-menu {
    font-size: 0.9rem;
}

.mediumnavigation .search-icon {
    margin-left: -40px;
    display: inline-block;
    margin-top: 3px;
    cursor: pointer;
}

.mediumnavigation .navbar-brand img {
    max-height: 30px;
    margin-right: 5px;
}

.mainheading h1.sitetitle {
    font-family: Righteous;
}

.mainheading h1.posttitle {
    font-weight: 700;
    margin-bottom: 1rem;
}

.footer {
    border-top: 1px solid rgba(0, 0, 0, .05) !important;
    padding-top: 15px;
    padding-bottom: 12px;
    font-size: 0.8rem;
    color: rgba(0, 0, 0, .44);
    margin-top: 50px;
    margin-bottom: 62px;
    position: relative;
    background: #fff;
}

.link-dark {
    color: rgba(0, 0, 0, .8);
}

.article-post {
    font-family: Merriweather;
    font-size: 1.1rem;
    line-height: 1.84;
    color: rgba(0, 0, 0, .8);
}

blockquote {
    border-left: 4px solid #00ab6b;
    padding: 0 20px;
    font-style: italic;
    color: rgba(0, 0, 0, .5);
}

.article-post p,
.article-post blockquote {
    margin: 0 0 1.5rem 0;
}

.featured-image {
    display: block;
    margin-bottom: 1.5rem;
}


.toc-wrapper {
    flex: 0 0 20%;
    max-width: 20%;
}
.share {
    text-align: left;
}

.share p {
    margin-bottom: 10px;
    font-size: 0.95rem;
}

.share ul li {
    display: inline-block;
    margin-bottom: 9px;
}

.share ul {
    padding-left: 0;
    margin-left: 0;
}

.share ul li i.fa {
    border: 1px solid #ddd;
    width: 30px;
    height: 30px;
    line-height: 30px;
    text-align: center;
    border-radius: 50%;
}

.svgIcon {
    vertical-align: middle;
}

.sticky-top-offset {
    top: 100px;
}

@media (min-width:1024px) {
    .share ul li {
        display: block;
    }
}

@media (max-width:999px) {
    .featured-box-img-cover {
        height: 359px;
    }

    .alertbar {
        position: relative !Important;
        margin-bottom: 20px;
        margin-top: 20px;
        box-shadow: none !Important;
        padding-right: 14px !Important;
    }

    #comments {
        margin-right: 15px;
    }

    .jumbotron.fortags {
        margin-bottom: 0 !Important;
    }

    .alertbar form {
        margin-top: 20px;
    }

    .alertbar span,
    .alertbar form {
        display: block;
    }

    .alertbar input[type="submit"] {
        border-radius: 3px !Important;
    }

    .alertbar input[type="email"] {
        margin-right: 0px !Important;
        display: block;
        border-right: 1px solid #ddd !Important;
        margin-bottom: 10px;
    }

    .jumbotron {
        margin-bottom: 0;
        border-radius: 0;
    }

    .listfeaturedtag .card {
        height: auto;
    }

    .listfeaturedtag .wrapfooter {
        position: relative;
        margin-top: 30px;
    }

    .listfeaturedtag .card-block {
        padding: 20px;
    }

    .footer {
        margin-top: 0px;
        margin-bottom: 0px;
    }
}

@media (max-width:1024px) {
    .post-top-meta .col-md-10 {
        text-align: center;
    }
}

@media (max-width:767px) {
    .post-top-meta.authorpage {
        text-align: center;
    }
}

.share,
.share a {
    color: rgba(0, 0, 0, .44);
    fill: rgba(0, 0, 0, .44);
}
/* ... */

